# lead-lag

./: .gitignore  Makefile  README.md  contrast.py  cpython_contrast.py  fast_contrast.py  lead_lag.py  lead_lag.pyx  lead_lag_example.ipynb  lead_lag_example_2.ipynb  main.py  main_bachelier.py  main_bitcoin.py  pyproject.toml  run_bitcoin_lag_analysis.sh  setup.py  starter.py  utils.py
.github/workflows/: ci.yml
cython/: lead_lag.pyx
data/: bitflyerJPY.csv.small  btcboxJPY.csv.small
examples/: bitflyer_btcbox_lag.py  bitmex_ftx_lag.py  example_synthetic_data.py  realtime.py  small.py  sub_second_bitcoin.py
lead_lag/: __init__.py  contrast.py  lead_lag.py  lead_lag_impl.py  lead_lag_impl.pyx
lead_lag/.keep/: lead_lag_impl.py
lead_lag/scripts/: __init__.py  display_contrast.py  main_bachelier.py  main_bitcoin.py  read_bachelier_data.py  read_bitcoin_data.py  realtime_lead_lag.py  run_bitcoin_lag_analysis.sh  visualize_contrasts.py
lead_lag/scripts/bitcoin/: convert_bitcoinchart_file.py  split_dataset_per_day.py
notebooks/: lead_lag_example_1.ipynb  lead_lag_example_2.ipynb  realtime.py
scripts/: display_contrast.py  llr.py  read_bachelier_data.py  read_bitcoin_data.py  read_data.py  visualize_contrasts.py
scripts/bitcoin/: convert_bitcoinchart_file.py  run.sh  split_dataset_per_day.py
